test/corpus/statements.txt
================
Check comment
================

/**
 * Comment
 */
// Comment

---

(source_file
  (comment)
  (comment))

================
Define rules version
================

rules_version = '2';

---

(source_file
  (version_definition
    (string)))

================
Define service firestore
================

service cloud.firestore {
    // comment
}

---

(source_file
  (service_definition
    (service_type)
    (service_block
        (comment))))

================
Define match
================

service cloud.firestore {
    match /collection/{doc} {
        // comment
    }
}

---

(source_file
  (service_definition
    (service_type)
    (service_block
        (match_definition
            (path)
            (match_block
                (comment))))))
